[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/mc_standing_animation.png" type="Texture" id=1]
[ext_resource path="res://scripts/player_controller.gd" type="Script" id=2]
[ext_resource path="res://scenes/PickupZone.gd" type="Script" id=3]
[ext_resource path="res://assets/Particles/DubJumpParticleSS.png" type="Texture" id=4]
[ext_resource path="res://music/Jump.wav" type="AudioStream" id=5]
[ext_resource path="res://music/FirstJump.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.75, 27 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.5, 27 )

[sub_resource type="Animation" id=3]
resource_name = "IdleLeft"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleRight"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "MoveLeft"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "MoveRight"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "MoveLeft"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "MoveRight"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachine" id=24]
states/IdleLeft/node = SubResource( 8 )
states/IdleLeft/position = Vector2( 95, 47 )
states/IdleRight/node = SubResource( 9 )
states/IdleRight/position = Vector2( 95, 133 )
states/MoveLeft/node = SubResource( 10 )
states/MoveLeft/position = Vector2( 281, 47 )
states/MoveRight/node = SubResource( 11 )
states/MoveRight/position = Vector2( 281, 133 )
transitions = [ "IdleRight", "IdleLeft", SubResource( 12 ), "IdleLeft", "IdleRight", SubResource( 13 ), "IdleLeft", "MoveLeft", SubResource( 14 ), "MoveLeft", "IdleLeft", SubResource( 15 ), "MoveLeft", "MoveRight", SubResource( 16 ), "MoveRight", "MoveLeft", SubResource( 17 ), "IdleRight", "MoveLeft", SubResource( 18 ), "MoveLeft", "IdleRight", SubResource( 19 ), "MoveRight", "IdleLeft", SubResource( 20 ), "IdleLeft", "MoveRight", SubResource( 21 ), "IdleRight", "MoveRight", SubResource( 22 ), "MoveRight", "IdleRight", SubResource( 23 ) ]
start_node = "IdleRight"

[sub_resource type="AnimationNodeStateMachinePlayback" id=25]

[sub_resource type="CanvasItemMaterial" id=26]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 9
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=27]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 1.5

[node name="player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -3 )
hframes = 3
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.75, -3 )
shape = SubResource( 1 )

[node name="PickupZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
visible = false
position = Vector2( -0.5, -3 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleLeft = SubResource( 3 )
anims/IdleRight = SubResource( 4 )
anims/MoveLeft = SubResource( 5 )
anims/MoveRight = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 24 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 25 )

[node name="JumpParticles" type="Particles2D" parent="."]
material = SubResource( 26 )
position = Vector2( 0, 22 )
emitting = false
amount = 1
lifetime = 0.35
one_shot = true
local_coords = false
process_material = SubResource( 27 )
texture = ExtResource( 4 )

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="DubJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[connection signal="body_entered" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_entered"]
[connection signal="body_exited" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_exited"]
